	* docs/README.release, client/callback.h, client/gtk/interface.c,
	client/gtk/callbacks.c, client/gtk/frontend.h, client/gtk/chat.c,
	client/common/client.c, client/common/client.h,
	client/common/Makefile.am, client/common/player.c,
	client/common/chat.c, client/ai/ai.h, client/ai/greedy.c,
	client/ai/Makefile.am, client/ai/ai.c, client/ai/lobbybot.c: Added
	robot for the lobby.
	
2006-08-01  Bas Wijnen <shevek@fmf.nl>
	* configure.ac: Mention install root in notification.
	* configure.ac, Makefile.am: Let configure.ac not touch AM_*
	variables.

2006-07-29  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/editor.c: Added keyboard shortcuts to the editor
	* client/common/client.c: Allow a player to initiate trade when he has
	no resources
	
2006-07-27  Bas Wijnen <shevek@fmf.nl>
	* editor/gtk/editor.c, common/gtk/theme.c, common/gtk/select-game.c,
	common/game.c, common/map.c, common/game.h, common/state.c,
	common/log.c, common/map.h, common/state.h, common/network.c,
	meta-server/main.c, server/player.c, server/pregame.c,
	client/gtk/callbacks.c, client/gtk/player.c,
	client/gtk/settingscreen.c, client/gtk/state.c, client/gtk/gui.c,
	client/gtk/connect.c, client/common/develop.c, client/common/robber.c,
	client/common/client.c, client/common/client.h,
	client/common/resource.c, client/common/player.c, client/ai/ai.c: Use
	dynamic instead of static memory to allow arbitrary large strings in
	most situations.  Still use static strings for network traffic, to
	avoid denial of service opportunities.
	* server/gtk/main.c: Show all authors.

2006-07-27  Bas Wijnen <shevek@fmf.nl>
	* macros/Makefile.am, editor/gtk/Makefile.am,
	editor/gtk/pioneers-editor.rc, editor/Makefile.am, docs/Makefile.am,
	common/gtk/aboutbox.c, common/gtk/Makefile.am, common/Makefile.am,
	meta-server/Makefile.am, configure.ac, server/gtk/Makefile.am,
	server/pregame.c, server/Makefile.am, Makefile.am, autogen.sh,
	client/gtk/pioneers.rc, client/gtk/data/themes/Tiny/Makefile.am,